# experiments

./: Ex11,12_Input.py  Ex13.py  Ex16_test.txt  Ex20_test.txt  Ex21-22.py  Ex21.py  Ex22.py  Ex27-30.py  Ex40.py  Ex42.py  Ex43.py  Ex44.py  Ex_INF.py  README.md  ex25.py  ex44.py
My Python Notes/: Python-Basics06.md
cpp/: cpp.md
cpp/algorithms/: #790_sol2.cpp  1D_DM#797.cpp  1D_prefix_sum#795.cpp  2D_DM#798.cpp  2D_prefix_sum#796.cpp  2_pointers#799.cpp  2_pointers#800.cpp  2_pointers.cpp  HAA_add#791.cpp  HAA_div#794.cpp  HAA_mul#793.cpp  HAA_sub#792.cpp  algorithm_sort.cpp  binary_search#789.cpp  binary_search#790.cpp  binary_search_float.cpp  binary_search_model.cpp  bit_2s_complement.cpp  bitwise_op.cpp  bubble_sort.cpp  insertion_sort.cpp  lowbit#801.cpp  merge_sort#787.cpp  merge_sort#788.cpp  quick_selection#786.cpp  quick_sort#785.cpp  quick_sort#786.cpp  selection_sort.cpp
cpp/blog-view/: package.json
cpp/oatpp-blog-api/: CMakeLists.txt  README.md
cpp/os/: scheduling.c  test.sh  test01  test01.c  test02  test02.c  test03  test03.c
cpp/topics/: constructorOverloading.cpp  string.cpp  (+4 more)
idris/: hello.idr
java/: TCPClient.java  TCPServer.java
javascript/: README.md
learn-python-the-hard-way/: Ex15.py  Ex17.py  Ex19.py  Ex23.py  Ex24.py  Ex25,26.py  Ex33,34.py  Ex38.py  Ex39.py  Selected_Ex1-10.py
python-notes/: Python-Basics02.md  Python-Basics03.md
rust/advanced_features/pancakes/: Cargo.toml
rust/future/: Cargo.toml
rust/future/src/: main.rs
sml/: test.sml
typescript/: package.json  tsconfig.json
unison/: .unisonHistory  scratch.u
(+1171 files in other folders)
