[package]
name = "future"
version = "0.1.0"
authors = ["raptazure <raptazure@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.5.0", features = ["attributes"] }
pin-project-lite = "0.1.4"
